<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/info"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/short_dsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_info_note"
                    android:drawableStart="@mipmap/ic_info_note"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_info_location"
                    android:drawableStart="@mipmap/ic_info_location"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_info_arrow"
                    android:drawableStart="@mipmap/ic_info_arrow"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_info_link"
                    android:drawableStart="@mipmap/ic_info_link"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_info_phone"
                    android:drawableStart="@mipmap/ic_info_phone"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_info_mail"
                    android:drawableStart="@mipmap/ic_info_mail"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_info_hours"
                    android:drawableStart="@mipmap/ic_info_hours"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/map"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/darker_gray" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/navigate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/black"
                    android:text="@string/navigate"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/description"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/long_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>